bug fix open statement (no more random freeze) plus options as facet
git-svn-id: https://gama-platform.googlecode.com/svn/branches/GAMA_CURRENT@6409 b91ef52e-2b48-11df-9ab6-b1cdc0d4a89a